@@ -5,7 +5,8 @@
     Calculate the missing rates per variant or per sample.
 }
 \usage{
-seqMissing(gdsfile, per.variant=TRUE, parallel=getOption("gds.parallel", FALSE))
+seqMissing(gdsfile, per.variant=TRUE,
+    parallel=getOption("seqarray.parallel", FALSE))
 }
 \arguments{
     \item{gdsfile}{a \code{\link{SeqVarGDSClass}} object}
